--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = '^3.8'
 black = "^20.8b1"
 flake8 = "^3.8.4"
 flake8-black = "^0.2.1"
+isort = "^5.7.0"
 
 [build-system]
 build-backend = 'poetry.core.masonry.api'
