--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,18 @@ flake8 = "^3.8.4"
 flake8-black = "^0.2.1"
 isort = "^5.7.0"
 
+[tool.black]
+line-length = 100
+
+[tool.isort]
+# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
+ensure_newline_before_comments = true
+force_grid_wrap = 0
+include_trailing_comma = true
+line_length = 100
+multi_line_output = 3
+use_parentheses = true
+
 [build-system]
 build-backend = 'poetry.core.masonry.api'
 requires = ['poetry-core>=1.0.0']
