--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
-authors = ['Christian Volkmann <christian.volkmann@rwth-aachen.de>']
-description = 'Open a file in your locally running Visual Studio Code instance from arbitrary terminal connections.'
-keywords = ['vscode']
-license = 'MIT'
-name = 'code-connect'
-repository = 'https://github.com/chvolkmann/code-connect'
-version = '0.2.1'
+authors = ["Christian Volkmann <christian.volkmann@rwth-aachen.de>"]
+description = "Open a file in your locally running Visual Studio Code instance from arbitrary terminal connections."
+keywords = ["vscode"]
+license = "MIT"
+name = "code-connect"
+repository = "https://github.com/chvolkmann/code-connect"
+version = "0.2.1"
 
 [tool.poetry.dependencies]
-python = '^3.8'
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
@@ -20,14 +20,9 @@ isort = "^5.7.0"
 line-length = 100
 
 [tool.isort]
-# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
-ensure_newline_before_comments = true
-force_grid_wrap = 0
-include_trailing_comma = true
-line_length = 100
+profile = "black"
 multi_line_output = 3
-use_parentheses = true
 
 [build-system]
-build-backend = 'poetry.core.masonry.api'
-requires = ['poetry-core>=1.0.0']
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
