--- a/.github/workflows/apply-code-style.yml
+++ b/.github/workflows/apply-code-style.yml
@@ -16,21 +16,32 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.x'
+      - name: Set up Poetry
+        uses: Gr1N/setup-poetry@v4
       - name: Install dependencies
-        run: pip install flake8 black isort
+        run: poetry install
+      - name: Cache packages
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.poetry
+            ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+      - run: ls -hal ~
+      - run: poetry
   lint:
     name: Linter
     runs-on: ubuntu-latest
     needs: setup
     steps:
-      - run: flake8 .
+      - run: poetry run flake8
   format:
     name: Formatters
     runs-on: ubuntu-latest
     needs: lint
     steps:
-      - run: black .
-      - run: isort .
+      - run: poetry run black .
+      - run: poetry run isort .
 
   
