chore(CI): Syntax

--- a/.github/workflows/apply-code-style.yml
+++ b/.github/workflows/apply-code-style.yml
@@ -35,16 +35,14 @@ jobs:
         with:
           path: ~/.poetry
           key: poetry-${{ hashFiles('poetry.lock') }}${{ hashFiles('~/.poetry/lib/poetry/__version__.py') }}
-          restore-keys:
-            - poetry-
+          restore-keys: poetry-
      
       - name: Restore dependencies
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: venv-${{ hashFiles('poetry.lock') }}
-          restore-keys:
-            - venv-
+          restore-keys: venv-
       - name: Install dependencies
         run: poetry install
       - name: Cache dependencies
@@ -52,8 +50,7 @@ jobs:
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: venv-${{ hashFiles('poetry.lock') }}
-          restore-keys:
-            - venv-
+          restore-keys: venv-
         
   lint:
     name: Linting
@@ -65,15 +62,13 @@ jobs:
         with:
           path: ~/.poetry
           key: poetry-${{ hashFiles('poetry.lock') }}${{ hashFiles('~/.poetry/lib/poetry/__version__.py') }}
-          restore-keys:
-            - poetry-
+          restore-keys: poetry-
       - name: Restore dependencies
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: venv-${{ hashFiles('poetry.lock') }}
-          restore-keys:
-            - venv-
+          restore-keys: venv-
 
       - name: flake8
         run: ~/.poetry/bin/poetry run flake8 .
@@ -88,15 +83,13 @@ jobs:
         with:
           path: ~/.poetry
           key: poetry-${{ hashFiles('poetry.lock') }}${{ hashFiles('~/.poetry/lib/poetry/__version__.py') }}
-          restore-keys:
-            - poetry-
+          restore-keys: poetry-
       - name: Restore dependencies
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: venv-${{ hashFiles('poetry.lock') }}
-          restore-keys:
-            - venv-
+          restore-keys: venv-
 
       - name: black
         run: ~/.poetry/bin/poetry run black .
