--- a/.github/actions/run-in-container/Dockerfile
+++ b/.github/actions/run-in-container/Dockerfile
@@ -11,6 +11,7 @@ RUN mkdir /app
 WORKDIR /app
 
 # Install poetry
-RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python - && \
+    ln -s $HOME/.poetry/bin/poetry /usr/bin/poetry
 
-CMD ["poetry", "--version"]
+CMD ["bash", "-lc"]
