--- a/.github/actions/run-in-container/action.yml
+++ b/.github/actions/run-in-container/action.yml
@@ -8,7 +8,7 @@ inputs:
 runs:
   using: docker
   image: ./Dockerfile
-  entrypoint: [bash]
+  entrypoint: bash
   args:
     - -lc
     - ${{ inputs.cmd }}
