--- a/.github/workflows/apply-code-style.yml
+++ b/.github/workflows/apply-code-style.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install Python
+        uses: actions/setup-python@v2
+
       - name: Install Poetry
         uses: snok/install-poetry@v1.1.1
 
@@ -27,6 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Install Python
+        uses: actions/setup-python@v2
 
       - name: Install Poetry
         uses: snok/install-poetry@v1.1.1
