--- a/.github/workflows/apply-code-style.yml
+++ b/.github/workflows/apply-code-style.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   lint:
-    name: Lint
+    name: Linter
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,8 +25,8 @@ jobs:
       - name: flake8
         run: poetry run flake8 .
 
-  format:
-    name: Format
+  code-style:
+    name: Code Style Checker
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -41,10 +41,10 @@ jobs:
         run: poetry install
 
       - name: flake8
-        run: poetry run flake8
+        run: poetry run flake8 .
 
       - name: black
-        run: poetry run black .
+        run: poetry run black --check .
 
       - name: isort
-        run: poetry run isort .
+        run: poetry run isort --check .
