--- a/.github/workflows/apply-code-style.yml
+++ b/.github/workflows/apply-code-style.yml
@@ -26,7 +26,7 @@ jobs:
         run: poetry run flake8 .
 
   code-style:
-    name: Code Style Checker
+    name: Code Style
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -39,9 +39,6 @@ jobs:
 
       - name: Install dependencies
         run: poetry install
-
-      - name: flake8
-        run: poetry run flake8 .
 
       - name: black
         run: poetry run black --check .
