--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,16 @@ license = "MIT"
 name = "code-connect"
 repository = "https://github.com/chvolkmann/code-connect"
 version = "0.3.2"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8"
 
-[tool.poetry.dev-dependencies]
-black = "^20.8b1"
-flake8 = "^3.8.4"
-isort = "^5.7.0"
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.9.10"
 
-[tool.black]
+[tool.ruff]
 line-length = 100
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
