--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ version = "0.3.2"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.9"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.10"
+mypy = "^1.15.0"
 
 [tool.ruff]
 line-length = 100
